--- a/App.config
+++ b/App.config
@@ -4,11 +4,13 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="SalesforceConnectionString" connectionString="User Id=lizzo@blupura.com.sandbox2;Password=BluPura55!;Security Token=dpyiBtCN8WYLMCO2Rr6kATbV2;Persist Security Info=True;Host=test.salesforce.com;System Objects=true"/>
-		<add name="SalesforceProdConnectionString" connectionString="User Id=lizzo@blupura.com;Password=BluPura55!;Security Token=Ib8HeYuBJvnmnI3GEnwWZOuw;Persist Security Info=True;Host=login.salesforce.com;System Objects=true"/>
+		<add name="SalesforceTestConnectionString" connectionString="User Id=integrationuser@culligan.it.preprod;Password=Culligan3!;Security Token=xrpZapIPakOn1n2hNhxiHZSz;Persist Security Info=True;Host=test.salesforce.com;System Objects=true"/>
+		<add name="SalesforceProdConnectionString" connectionString="User Id=integrationuser@culligan.it;Password=Culligan.01;Security Token=OhVL5rHrJ6L01ycjbhhpzPl3;Persist Security Info=True;Host=login.salesforce.com;System Objects=true"/>
 		<add name="SqlConnectionString" connectionString="Data Source=172.29.251.3\culligan;Initial Catalog=BI_STG;User ID=evaghi;Password=Culligan2021$;Application Name=FieldServiceStockMaterial-C#;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
 		<add key="DestinatariErrori" value="lizzo@culligan.it;emiliano.vaghi@blublublu.it"/>
+		<add key="BatchSize" value="50"/>
+		<add key="IsSandbox" value="1"/>
 	</appSettings>
 </configuration>
